{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 9,
  "lineage": "3957cd55-9945-462e-f224-dbabc272debc",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-02bb17b66c0c58f2b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361352751215:subnet/subnet-02bb17b66c0c58f2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "id": "subnet-02bb17b66c0c58f2b",
            "map_public_ip_on_launch": true,
            "owner_id": "361352751215",
            "state": "available",
            "vpc_id": "vpc-060b1e8678006f15c"
          }
        },
        {
          "index_key": "subnet-0492e969af049b3a1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361352751215:subnet/subnet-0492e969af049b3a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-0492e969af049b3a1",
            "map_public_ip_on_launch": true,
            "owner_id": "361352751215",
            "state": "available",
            "vpc_id": "vpc-060b1e8678006f15c"
          }
        },
        {
          "index_key": "subnet-0b32f65b1e4194f32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361352751215:subnet/subnet-0b32f65b1e4194f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-0b32f65b1e4194f32",
            "map_public_ip_on_launch": true,
            "owner_id": "361352751215",
            "state": "available",
            "vpc_id": "vpc-060b1e8678006f15c"
          }
        },
        {
          "index_key": "subnet-0b88a24d6d1072433",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361352751215:subnet/subnet-0b88a24d6d1072433",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-0b88a24d6d1072433",
            "map_public_ip_on_launch": true,
            "owner_id": "361352751215",
            "state": "available",
            "vpc_id": "vpc-060b1e8678006f15c"
          }
        },
        {
          "index_key": "subnet-0d6fd4c6b5e082976",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361352751215:subnet/subnet-0d6fd4c6b5e082976",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-0d6fd4c6b5e082976",
            "map_public_ip_on_launch": true,
            "owner_id": "361352751215",
            "state": "available",
            "vpc_id": "vpc-060b1e8678006f15c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361352751215:vpc/vpc-060b1e8678006f15c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0850a8a2e7cd4561b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0132aaa3cd50ca049",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-060b1e8678006f15c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-079e10d298e18e28d",
            "owner_id": "361352751215",
            "state": "available",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361352751215:loadbalancer/app/app-load-balancer/74f0c83c95ffef54",
            "arn_suffix": "app/app-load-balancer/74f0c83c95ffef54",
            "dns_name": "app-load-balancer-691203036.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:361352751215:loadbalancer/app/app-load-balancer/74f0c83c95ffef54",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-load-balancer",
            "security_groups": [
              "sg-038be7d13a7c4ca35",
              "sg-04b7c2a889692d7ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02bb17b66c0c58f2b"
              },
              {
                "subnet_id": "subnet-0492e969af049b3a1"
              },
              {
                "subnet_id": "subnet-0b32f65b1e4194f32"
              },
              {
                "subnet_id": "subnet-0b88a24d6d1072433"
              },
              {
                "subnet_id": "subnet-0d6fd4c6b5e082976"
              }
            ],
            "subnets": [
              "subnet-02bb17b66c0c58f2b",
              "subnet-0492e969af049b3a1",
              "subnet-0b32f65b1e4194f32",
              "subnet-0b88a24d6d1072433",
              "subnet-0d6fd4c6b5e082976"
            ],
            "vpc_id": "vpc-060b1e8678006f15c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ecs_app",
            "aws_security_group.rds",
            "data.aws_subnet.ecs_app",
            "data.aws_subnet_ids.ecs_app",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361352751215:listener/app/app-load-balancer/74f0c83c95ffef54/f57fca88f6e8cba5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:361352751215:targetgroup/backend/ed6ff0da3cbf6c69",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:361352751215:listener/app/app-load-balancer/74f0c83c95ffef54/f57fca88f6e8cba5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:361352751215:loadbalancer/app/app-load-balancer/74f0c83c95ffef54",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.webapp",
            "aws_security_group.ecs_app",
            "aws_security_group.rds",
            "data.aws_subnet.ecs_app",
            "data.aws_subnet_ids.ecs_app",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361352751215:targetgroup/backend/ed6ff0da3cbf6c69",
            "arn_suffix": "targetgroup/backend/ed6ff0da3cbf6c69",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:361352751215:targetgroup/backend/ed6ff0da3cbf6c69",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "backend",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-060b1e8678006f15c"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361352751215:security-group/sg-04b7c2a889692d7ca",
            "description": "Allow webapp ECS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for http",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b7c2a889692d7ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for http , nginx",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "for django",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ecs_app",
            "name_prefix": "",
            "owner_id": "361352751215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060b1e8678006f15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361352751215:security-group/sg-038be7d13a7c4ca35",
            "description": "Allow webapp ECS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "for http",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038be7d13a7c4ca35",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "TLS from RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_ecs_app",
            "name_prefix": "",
            "owner_id": "361352751215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS ecs app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060b1e8678006f15c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}